--- a/index.html
+++ b/index.html
@@ -5,10 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FRUTIGER CRUD</title>
+
+    <!-- CSS -->
+     <link rel="stylesheet" href="./src/styles/general-style.css">
+     <link rel="stylesheet" href="./src/styles/mobile-style.css">
     <link rel="stylesheet" href="./src/styles/desktop-style.css">
 </head>
 <body>
-    
-    <script src="./src/styles/desktop-style.css"></script>
+    <main>
+        <section class="container" id="table">
+            <h1>Data on table</h1>
+            <article class="data">
+                <div class="user">
+                    <p>{user}</p>
+                    <p>{alteruser}</p>
+                </div>
+                <div class="text">
+                    <p>{title}</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic neque adipisci id sunt exercitationem nesciunt molestias animi cupiditate, incidunt, enim accusantium perferendis fuga blanditiis culpa eum quod praesentium explicabo ad!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo iure excepturi consequuntur nulla dignissimos vitae pariatur. Eius adipisci nobis, illo perferendis, esse beatae ipsa sit sequi officia laborum numquam reiciendis.</p>
+                </div>
+            </article>
+        </section>
+        <section class="container" id="form">
+            <h1>Insert your text</h1>
+
+            <form action="/" method="post">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="lastname">Last Name</label>
+                <input type="text" id="lastname" name="lastname" required>
+
+                <label for="title">Title</label>
+                <input type="text" id="tittle" name="tittle" required>
+
+                <label for="text">Text</label>
+                <input type="text" id="text" name="text" required>
+
+                <button type="submit">Submit</button>
+            </form>
+            
+        </section>
+    </main>
+    <script src="./src/js/main.js"></script>
 </body>
 </html>
